--- a/sort-svc.yaml
+++ b/sort-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: grep-svc
+  name: sort-svc
 spec:
   selector:
-    name: shell-grep
+    name: shell-sort
   ports:
     - port: 8000
       targetPort: 8000
