--- a/base-rc.yaml
+++ b/base-rc.yaml
@@ -16,7 +16,7 @@ spec:
         run: shell
     spec:
       containers:
-      - image: alpine
+      - image: python:2.7
         name: shell
         resources: {}
 status:
